# olex2

./: CMakeLists.txt  Doxyfile  Makefile  README.md  SConstruct  pyproject.toml  vcpkg.json
AI-DOC/: README.md  architecture.md  user_guide.md
AI-DOC/classes/: README.md
AI-DOC/components/: README.md  glib.md  gxlib.md  interactions.md  olex.md  sdl.md  xlib.md
AI-DOC/developer/: README.md  extending.md
doxygen/html/: 3dframe_8h_source.html  IsoSurface_8h_source.html  absorpc_8h_source.html  actions_8h_source.html  afixgroup_8h_source.html  alg__test_8h_source.html  align_8h_source.html  analysis_8h_source.html  annotated.html  annotated_dup.js  arrays_8h_source.html  association_8h_source.html  asymmunit_8h_source.html  atomlegend_8h_source.html  atomref_8h_source.html  atomregistry_8h_source.html  atomsort_8h_source.html  auto_8h_source.html  bapp_8h_source.html  beevers-lipson_8h_source.html  binding__test_8h_source.html  bitarray_8h_source.html  btnext_8h_source.html  builtins_8h_source.html  calc__ext_8h_source.html  catom_8h_source.html  catomlist_8h_source.html  cdsfs_8h_source.html  cell__reduction_8h_source.html  cell__reduction__test_8h_source.html  checkboxext_8h_source.html  chembase_8h_source.html  chemdata_8h_source.html  chnexp_8h_source.html  choiceext_8h_source.html  cif_8h_source.html  cifdata_8h_source.html  cifdp_8h_source.html  ciftab_8h_source.html  citem_8h_source.html  (+3691 more)
doxygen/html/search/: all_0.js  all_1.js  all_12.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+6 more)
doxygen/latex/: 3dframe_8h_source.tex  IsoSurface_8h_source.tex  absorpc_8h_source.tex  actions_8h_source.tex  afixgroup_8h_source.tex  alg__test_8h_source.tex  align_8h_source.tex  analysis_8h_source.tex  annotated.tex  arrays_8h_source.tex  association_8h_source.tex  asymmunit_8h_source.tex  atomlegend_8h_source.tex  atomref_8h_source.tex  atomregistry_8h_source.tex  atomsort_8h_source.tex  auto_8h_source.tex  bapp_8h_source.tex  beevers-lipson_8h_source.tex  binding__test_8h_source.tex  bitarray_8h_source.tex  btnext_8h_source.tex  builtins_8h_source.tex  calc__ext_8h_source.tex  catom_8h_source.tex  catomlist_8h_source.tex  cdsfs_8h_source.tex  cell__reduction_8h_source.tex  cell__reduction__test_8h_source.tex  checkboxext_8h_source.tex  chembase_8h_source.tex  chemdata_8h_source.tex  chnexp_8h_source.tex  choiceext_8h_source.tex  cif_8h_source.tex  cifdata_8h_source.tex  cifdp_8h_source.tex  ciftab_8h_source.tex  citem_8h_source.tex  classAActionHandler.tex  (+1940 more)
glib/: CMakeLists.txt
gxlib/: CMakeLists.txt  gxbase.h  olxstate.h  xtls.cpp
nanobind/: binds.cpp
olex/: CMakeLists.txt  mainform.cpp  mainform.h  xglcanv.cpp  xglcanv.h  xpprocs.cpp
olex/html/: CMakeLists.txt  htmlext.cpp  htmlext.h  htmlmanager.cpp  htmlmanager.h  htmltags.cpp  imgcellext.cpp  widgetcellext.h
olex/webview/: twebview.cpp  twebview.h  webview.cpp  webviewmanager.cpp  webviewmanager.h
repository/: CMakeLists.txt  httpfs.cpp  refinement_listener.cpp  refinement_listener.h  updateapi.cpp
sdl/: CMakeLists.txt
sdl/smart/: olx_istring.h  olx_wstring.h
xlib/: afixgroup.cpp  xmacro.h
