[project]
name = "olex2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litgen",
    "nanobind>=2.7.0",
    "pip>=25.0.1",
    "python-dev-tools>=2019.2.24",
]

[tool.uv.sources]
litgen = { git = "https://github.com/pthom/litgen" }
